<resources>
    <string name="app_name">pr-cbs</string>
    <string name="title_home">Главная</string>
    <string name="title_catalog">Каталог</string>
    <string name="title_event">Афиша</string>
    <string name="title_to_reader">Чиателю</string>
    <string name="title_more">Больше</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_about">AboutActivity</string>

    <string name="map_key" translatable="false">
       AIzaSyCzBdN_i-PkzZEXdeMWyCH0FtJtvioKonU
   </string>
    <string name="server_error_text">Ошибка получения данных от сервера.\nПожалуйста, повторите попытку\nчерез некоторое время</string>
    <string name="found">Найдено:</string>
    <string name="no_internet_connection">Вы не подключены к Интернету</string>
    <string name="enter_event_name">Введите название мероприятия</string>
    <string name="event_fragment_title">Афиша событий</string>
    <string name="more_info">Подробнее</string>
    <string name="num_1_8">12345678</string>
    <string name="reader_card">Читательский билет:</string>

</resources>
